2004-01-09  Bernhard Held <bernhard@bernhardheld.de>

	* lib/src-archive.mk: added HOSTNAME to src-archiv name

2003-10-28  Bernhard Held <bernhard@bernhardheld.de>

	* local/x86-linux2.cf.sourceforge.net-i586-mingw32msvc.mk: added
	* local/x86-linux2.cf.sourceforge.net.mk: added
	* sdcc-build-bootstrap.sh: fixed typo "flitered"; BUILDROOT can now be defined in enviroment

2003-09-04  Bernhard Held <bernhard@bernhardheld.de>

	* support/error-filter.sh: more tests need filter for integer overflow on host

2003-09-03  Bernhard Held <bernhard@bernhardheld.de>

	* sdcc-build-bootstrap.sh: cp log files from local hd to $HOME/build on nfs server

2003-08-29  Bernhard Held <bernhard@bernhardheld.de>

	* sdcc-build-bootstrap.sh: moved BUILDROOT to local harddisk
	/var/tmp/`whoami`/build; nfs access was incredible slow, and we can
	build now on all hosts at the same time!

2003-08-28  Bernhard Held <bernhard@bernhardheld.de>

	* support/error-filter.sh: added 2nd filter for integer overflow on host

2003-08-22  Bernhard Held <bernhard@bernhardheld.de>

	* support/error-filter.sh: added filter for integer overflow on host

2003-08-07  Bernhard Held <bernhard@bernhardheld.de>

	* local/usf-cf-x86-linux-2.mk: added
	* local/usf-cf-x86-linux-2.cf.sourceforge.net.mk: added (complain to SF)

2003-07-28  Bernhard Held <bernhard@bernhardheld.de>

	* local/amd64-linux1.mk: added

2003-07-18  Bernhard Held <bernhard@bernhardheld.de>

	* lib/bootstrap.mk: added *.TXT (old *.txt) to files, which need recoding

2003-07-17  Bernhard Held <bernhard@bernhardheld.de>

	Replace cvs.sdcc.sourceforge.net:/cvsroot/sdcc by cvs.sourceforge.net:/cvsroot/sdcc
	* sdcc-build-bootstrap.sh
	* components/sdcc.mk
	* components/sdcc-extra.mk
	* lib/fetch.mk
	* lib/bootstrap.mk: build own recode

2003-07-16  Bernhard Held <bernhard@bernhardheld.de>

	switch to cvs access via ssh:
	* sdcc-build-bootstrap.sh:
	* lib/fetch.mk:
	* components/sdcc-extra.mk:

2003-07-14  Bernhard Held <bernhard@bernhardheld.de>